--- a/app/_scss/abstracts/mixins/_list.scss
+++ b/app/_scss/abstracts/mixins/_list.scss
@@ -13,13 +13,13 @@
     color: setColor(neutral, gray-20);
     font-size: rem(17);
     line-height: 1.35;
-    margin-bottom: rem(8);
+    margin: 0 0 rem(8) 0;
     padding-left: rem(16);
     position: relative;
 
     &:before {
       background-color: setColor(neutral, gray-20);
-      content: '';
+      content: "";
       display: inline-block;
       height: rem(5);
       left: 0;
