Responsive layout for header - added stack prop to Group to allow mobile stacking

--- a/app/_components/group/group.module.scss
+++ b/app/_components/group/group.module.scss
@@ -3,5 +3,11 @@
 // -----------------------------------------------------------------------------
 
 .group {
-	@include group-horizontal;
+  @include group-horizontal;
+}
+
+.stack {
+  @include respond-below(md) {
+    @include group-vertical;
+  }
 }
