--- a/app/_scss/styles.global.scss
+++ b/app/_scss/styles.global.scss
@@ -11,6 +11,7 @@
 // Independent mixins
 @import "abstracts/mixins/grid";
 @import "abstracts/mixins/groupHorizontal";
+@import "abstracts/mixins/groupVertical";
 @import "abstracts/mixins/heading";
 @import "abstracts/mixins/hyperlink";
 @import "abstracts/mixins/list";
