--- a/app/_components/title/title.module.scss
+++ b/app/_components/title/title.module.scss
@@ -6,6 +6,11 @@
   margin-bottom: rem(16);
   margin-top: 0;
   padding-bottom: rem(8);
+
+  @include respond-below(md) {
+    font-size: rem(48);
+    line-height: 1;
+  }
 }
 
 .h2 {
