Adjusted metadata spacing

--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -22,6 +22,11 @@
     margin-top: 0;
   }
 
+  @include respond-below(md) {
+    @include group-vertical();
+    margin-top: 0;
+  }
+
   a {
     @include hyperlink();
   }
