Tweaked career headlines

--- a/app/_components/career-article/career-article.module.scss
+++ b/app/_components/career-article/career-article.module.scss
@@ -13,9 +13,9 @@
 .header {
   margin-bottom: rem(8);
 
-  // h3 {
-  //   text-wrap: balance;
-  // }
+  h3 {
+    text-wrap: pretty;
+  }
 }
 
 .metadata {
