Layout and typography changes for print via browser interface

--- a/app/_components/button/button.module.scss
+++ b/app/_components/button/button.module.scss
@@ -22,6 +22,11 @@
   &:hover {
     background-color: setColor(secondary, redOrange);
   }
+
+  @media print {
+    font-size: rem(14);
+    padding: rem(6) rem(8);
+  }
 }
 
 .text {
