--- a/app/_components/skill/skill.module.scss
+++ b/app/_components/skill/skill.module.scss
@@ -17,4 +17,9 @@
   &:visited {
     background-color: setColor(primary, blue);
   }
+
+  @media print {
+    font-size: rem(13);
+    padding: rem(6) rem(8);
+  }
 }
