--- a/app/_scss/abstracts/mixins/_gridPadding.scss
+++ b/app/_scss/abstracts/mixins/_gridPadding.scss
@@ -12,4 +12,8 @@
   @include respond-above(md) {
     padding: $grid-v-padding * 2 $grid-h-padding * 2;
   }
+
+  @media print {
+    padding: 0;
+  }
 }
