--- a/app/_scss/abstracts/mixins/_list.scss
+++ b/app/_scss/abstracts/mixins/_list.scss
@@ -17,6 +17,10 @@
     padding-left: rem(16);
     position: relative;
 
+    @media print {
+      font-size: rem(13);
+    }
+
     &:before {
       background-color: setColor(neutral, gray-20);
       content: "";
