--- a/app/_components/header/header.module.scss
+++ b/app/_components/header/header.module.scss
@@ -40,6 +40,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 0;
+    padding-bottom: rem(1);
 
     @media print {
       width: 100%;
